--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@
             class="flex gap-[30px] xl:gap-[66px] items-center max-[950px]:hidden"
           >
             <a
-              class="roboto-mono text-[#D7D9DD] font-medium tracking-[1.4px] text-sm"
+              class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm border-b-[2px] border-solid border-transparent hover:border-[white] duration-200"
               href="#"
               >SERVICES</a
             >
             <a
-              class="roboto-mono text-[#D7D9DD] font-medium tracking-[1.4px] text-sm"
+              class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm border-b-[2px] border-solid border-transparent hover:border-[white] duration-200"
               href="#"
               >ABOUT US</a
             >
             <a
-              class="roboto-mono text-[#D7D9DD] font-medium tracking-[1.4px] text-sm"
+              class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm border-b-[2px] border-solid border-transparent hover:border-[white] duration-200"
               href="#"
               >LOCATION</a
             >
             <a
-              class="roboto-mono text-[#D7D9DD] font-medium tracking-[1.4px] text-sm"
+              class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm border-b-[2px] border-solid border-transparent hover:border-[white] duration-200"
               href="#"
               >CAREER</a
             >
             <a
-              class="roboto-mono text-[#D7D9DD] font-medium tracking-[1.4px] text-sm"
+              class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm border-b-[2px] border-solid border-transparent hover:border-[white] duration-200"
               href="#"
               >PATIENT PORTAL</a
             >
@@ -75,7 +75,6 @@
             />
           </button>
           <!-- Black Overlay -->
-          <!-- Black Overlay -->
           <div id="overlay" class="fixed inset-0 bg-black/50 z-40 hidden"></div>
           <!-- Sidebar -->
           <div
@@ -88,27 +87,27 @@
             <div class="p-4">
               <div class="flex flex-col gap-[40px] items-center">
                 <a
-                  class="roboto-mono text-[#D7D9DD] font-medium tracking-[1.4px] text-sm"
+                  class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm border-b-[2px] border-solid border-transparent hover:border-[white] duration-200"
                   href="#"
                   >SERVICES</a
                 >
                 <a
-                  class="roboto-mono text-[#D7D9DD] font-medium tracking-[1.4px] text-sm"
+                  class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm border-b-[2px] border-solid border-transparent hover:border-[white] duration-200"
                   href="#"
                   >ABOUT US</a
                 >
                 <a
-                  class="roboto-mono text-[#D7D9DD] font-medium tracking-[1.4px] text-sm"
+                  class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm border-b-[2px] border-solid border-transparent hover:border-[white] duration-200"
                   href="#"
                   >LOCATION</a
                 >
                 <a
-                  class="roboto-mono text-[#D7D9DD] font-medium tracking-[1.4px] text-sm"
+                  class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm border-b-[2px] border-solid border-transparent hover:border-[white] duration-200"
                   href="#"
                   >CAREER</a
                 >
                 <a
-                  class="roboto-mono text-[#D7D9DD] font-medium tracking-[1.4px] text-sm"
+                  class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm border-b-[2px] border-solid border-transparent hover:border-[white] duration-200"
                   href="#"
                   >PATIENT PORTAL</a
                 >
