--- a/carrer.html
+++ b/carrer.html
@@ -272,7 +272,7 @@
           </p>
           <div>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px]"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -280,61 +280,9 @@
                 >
                   Commitment to Excellence
                 </p>
-                <span class="first-img">
+                <span class="transition-transform">
                   <svg
                     class="max-md:w-6"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="30"
-                    height="30"
-                    viewBox="0 0 30 30"
-                    fill="none"
-                  >
-                    <line
-                      y1="15.1136"
-                      x2="30"
-                      y2="15.1136"
-                      stroke="url(#paint0_linear_1204_1399)"
-                      stroke-width="2.5"
-                    />
-                    <line
-                      x1="15.1134"
-                      y1="30"
-                      x2="15.1134"
-                      y2="7.28523e-08"
-                      stroke="url(#paint1_linear_1204_1399)"
-                      stroke-width="2.5"
-                    />
-                    <defs>
-                      <linearGradient
-                        id="paint0_linear_1204_1399"
-                        x1="0"
-                        y1="16.3636"
-                        x2="30"
-                        y2="16.3636"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#FFA280" />
-                        <stop offset="1" stop-color="#8FD9D9" />
-                      </linearGradient>
-                      <linearGradient
-                        id="paint1_linear_1204_1399"
-                        x1="16.3634"
-                        y1="30"
-                        x2="16.3634"
-                        y2="0"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#FFA280" />
-                        <stop offset="1" stop-color="#8FD9D9" />
-                      </linearGradient>
-                    </defs>
-                  </svg>
-                </span>
-                <span
-                  class="bdt-ep-accordion-icon-opened hidden second-img text-5xl text-[white]"
-                >
-                  <svg
-                    class="max-md:w-6 rotate-45"
                     xmlns="http://www.w3.org/2000/svg"
                     width="30"
                     height="30"
@@ -395,7 +343,7 @@
               </p>
             </button>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px]"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -403,61 +351,9 @@
                 >
                   Collaborative and Supportive Environment
                 </p>
-                <span class="first-img">
+                <span class="transition-transform">
                   <svg
                     class="max-md:w-6"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="30"
-                    height="30"
-                    viewBox="0 0 30 30"
-                    fill="none"
-                  >
-                    <line
-                      y1="15.1136"
-                      x2="30"
-                      y2="15.1136"
-                      stroke="url(#paint0_linear_1204_1399)"
-                      stroke-width="2.5"
-                    />
-                    <line
-                      x1="15.1134"
-                      y1="30"
-                      x2="15.1134"
-                      y2="7.28523e-08"
-                      stroke="url(#paint1_linear_1204_1399)"
-                      stroke-width="2.5"
-                    />
-                    <defs>
-                      <linearGradient
-                        id="paint0_linear_1204_1399"
-                        x1="0"
-                        y1="16.3636"
-                        x2="30"
-                        y2="16.3636"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#FFA280" />
-                        <stop offset="1" stop-color="#8FD9D9" />
-                      </linearGradient>
-                      <linearGradient
-                        id="paint1_linear_1204_1399"
-                        x1="16.3634"
-                        y1="30"
-                        x2="16.3634"
-                        y2="0"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#FFA280" />
-                        <stop offset="1" stop-color="#8FD9D9" />
-                      </linearGradient>
-                    </defs>
-                  </svg>
-                </span>
-                <span
-                  class="bdt-ep-accordion-icon-opened hidden second-img text-5xl text-[white]"
-                >
-                  <svg
-                    class="max-md:w-6 rotate-45"
                     xmlns="http://www.w3.org/2000/svg"
                     width="30"
                     height="30"
@@ -517,7 +413,7 @@
               </p>
             </button>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px]"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -525,61 +421,9 @@
                 >
                   Advanced Facilities and Technology
                 </p>
-                <span class="first-img">
+                <span class="transition-transform">
                   <svg
                     class="max-md:w-6"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="30"
-                    height="30"
-                    viewBox="0 0 30 30"
-                    fill="none"
-                  >
-                    <line
-                      y1="15.1136"
-                      x2="30"
-                      y2="15.1136"
-                      stroke="url(#paint0_linear_1204_1399)"
-                      stroke-width="2.5"
-                    />
-                    <line
-                      x1="15.1134"
-                      y1="30"
-                      x2="15.1134"
-                      y2="7.28523e-08"
-                      stroke="url(#paint1_linear_1204_1399)"
-                      stroke-width="2.5"
-                    />
-                    <defs>
-                      <linearGradient
-                        id="paint0_linear_1204_1399"
-                        x1="0"
-                        y1="16.3636"
-                        x2="30"
-                        y2="16.3636"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#FFA280" />
-                        <stop offset="1" stop-color="#8FD9D9" />
-                      </linearGradient>
-                      <linearGradient
-                        id="paint1_linear_1204_1399"
-                        x1="16.3634"
-                        y1="30"
-                        x2="16.3634"
-                        y2="0"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#FFA280" />
-                        <stop offset="1" stop-color="#8FD9D9" />
-                      </linearGradient>
-                    </defs>
-                  </svg>
-                </span>
-                <span
-                  class="bdt-ep-accordion-icon-opened hidden second-img text-5xl text-[white]"
-                >
-                  <svg
-                    class="max-md:w-6 rotate-45"
                     xmlns="http://www.w3.org/2000/svg"
                     width="30"
                     height="30"
@@ -640,7 +484,7 @@
               </p>
             </button>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px]"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -648,61 +492,9 @@
                 >
                   Focus on Work-Life Balance
                 </p>
-                <span class="first-img">
+                <span class="transition-transform">
                   <svg
                     class="max-md:w-6"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="30"
-                    height="30"
-                    viewBox="0 0 30 30"
-                    fill="none"
-                  >
-                    <line
-                      y1="15.1136"
-                      x2="30"
-                      y2="15.1136"
-                      stroke="url(#paint0_linear_1204_1399)"
-                      stroke-width="2.5"
-                    />
-                    <line
-                      x1="15.1134"
-                      y1="30"
-                      x2="15.1134"
-                      y2="7.28523e-08"
-                      stroke="url(#paint1_linear_1204_1399)"
-                      stroke-width="2.5"
-                    />
-                    <defs>
-                      <linearGradient
-                        id="paint0_linear_1204_1399"
-                        x1="0"
-                        y1="16.3636"
-                        x2="30"
-                        y2="16.3636"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#FFA280" />
-                        <stop offset="1" stop-color="#8FD9D9" />
-                      </linearGradient>
-                      <linearGradient
-                        id="paint1_linear_1204_1399"
-                        x1="16.3634"
-                        y1="30"
-                        x2="16.3634"
-                        y2="0"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#FFA280" />
-                        <stop offset="1" stop-color="#8FD9D9" />
-                      </linearGradient>
-                    </defs>
-                  </svg>
-                </span>
-                <span
-                  class="bdt-ep-accordion-icon-opened hidden second-img text-5xl text-[white]"
-                >
-                  <svg
-                    class="max-md:w-6 rotate-45"
                     xmlns="http://www.w3.org/2000/svg"
                     width="30"
                     height="30"
@@ -762,7 +554,7 @@
               </p>
             </button>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px]"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -770,61 +562,9 @@
                 >
                   Continuous Professional Development
                 </p>
-                <span class="first-img">
+                <span class="transition-transform">
                   <svg
                     class="max-md:w-6"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="30"
-                    height="30"
-                    viewBox="0 0 30 30"
-                    fill="none"
-                  >
-                    <line
-                      y1="15.1136"
-                      x2="30"
-                      y2="15.1136"
-                      stroke="url(#paint0_linear_1204_1399)"
-                      stroke-width="2.5"
-                    />
-                    <line
-                      x1="15.1134"
-                      y1="30"
-                      x2="15.1134"
-                      y2="7.28523e-08"
-                      stroke="url(#paint1_linear_1204_1399)"
-                      stroke-width="2.5"
-                    />
-                    <defs>
-                      <linearGradient
-                        id="paint0_linear_1204_1399"
-                        x1="0"
-                        y1="16.3636"
-                        x2="30"
-                        y2="16.3636"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#FFA280" />
-                        <stop offset="1" stop-color="#8FD9D9" />
-                      </linearGradient>
-                      <linearGradient
-                        id="paint1_linear_1204_1399"
-                        x1="16.3634"
-                        y1="30"
-                        x2="16.3634"
-                        y2="0"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#FFA280" />
-                        <stop offset="1" stop-color="#8FD9D9" />
-                      </linearGradient>
-                    </defs>
-                  </svg>
-                </span>
-                <span
-                  class="bdt-ep-accordion-icon-opened hidden second-img text-5xl text-[white]"
-                >
-                  <svg
-                    class="max-md:w-6 rotate-45"
                     xmlns="http://www.w3.org/2000/svg"
                     width="30"
                     height="30"
@@ -885,7 +625,7 @@
               </p>
             </button>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px]"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -893,61 +633,9 @@
                 >
                   A Culture of Compassion
                 </p>
-                <span class="first-img">
+                <span class="transition-transform">
                   <svg
                     class="max-md:w-6"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="30"
-                    height="30"
-                    viewBox="0 0 30 30"
-                    fill="none"
-                  >
-                    <line
-                      y1="15.1136"
-                      x2="30"
-                      y2="15.1136"
-                      stroke="url(#paint0_linear_1204_1399)"
-                      stroke-width="2.5"
-                    />
-                    <line
-                      x1="15.1134"
-                      y1="30"
-                      x2="15.1134"
-                      y2="7.28523e-08"
-                      stroke="url(#paint1_linear_1204_1399)"
-                      stroke-width="2.5"
-                    />
-                    <defs>
-                      <linearGradient
-                        id="paint0_linear_1204_1399"
-                        x1="0"
-                        y1="16.3636"
-                        x2="30"
-                        y2="16.3636"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#FFA280" />
-                        <stop offset="1" stop-color="#8FD9D9" />
-                      </linearGradient>
-                      <linearGradient
-                        id="paint1_linear_1204_1399"
-                        x1="16.3634"
-                        y1="30"
-                        x2="16.3634"
-                        y2="0"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#FFA280" />
-                        <stop offset="1" stop-color="#8FD9D9" />
-                      </linearGradient>
-                    </defs>
-                  </svg>
-                </span>
-                <span
-                  class="bdt-ep-accordion-icon-opened hidden second-img text-5xl text-[white]"
-                >
-                  <svg
-                    class="max-md:w-6 rotate-45"
                     xmlns="http://www.w3.org/2000/svg"
                     width="30"
                     height="30"
@@ -1266,31 +954,20 @@
       });
     </script>
     <script>
-      const buttons = document.querySelectorAll(".toggle-button");
-      buttons.forEach((button) => {
+      document.querySelectorAll(".toggle-button").forEach((button) => {
         button.addEventListener("click", () => {
-          const firstImg = button.querySelector(".first-img");
-          const secondImg = button.querySelector(".second-img");
           const description = button.querySelector(".description");
-          const btn4 = button.querySelector(".btn4");
-          // Close all other sections first
-          buttons.forEach((otherButton) => {
-            if (otherButton !== button) {
-              const otherFirstImg = otherButton.querySelector(".first-img");
-              const otherSecondImg = otherButton.querySelector(".second-img");
-              const otherDescription =
-                otherButton.querySelector(".description");
+          const icon = button.querySelector("span");
 
-              otherFirstImg.classList.remove("hidden");
-              otherSecondImg.classList.add("hidden");
-              otherDescription.classList.add("hidden");
-              // otherButton.style.backgroundColor = "#f3f3f3"; // Reset background color
-            }
-          });
-          // Toggle the clicked section
-          firstImg.classList.toggle("hidden");
-          secondImg.classList.toggle("hidden");
+          // Toggle description visibility
           description.classList.toggle("hidden");
+
+          // Rotate icon when description is visible
+          if (description.classList.contains("hidden")) {
+            icon.classList.remove("rotate-45");
+          } else {
+            icon.classList.add("rotate-45");
+          }
         });
       });
     </script>
